// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marqueePlayCount renders 0 1`] = `
Array [
  .c0 {
  marquee-play-count: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueePlayCount renders function 1`] = `
Array [
  .c0 {
  marquee-play-count: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: has;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: has;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueePlayCount renders invalid theme path 1`] = `
Array [
  .c0 {
  marquee-play-count: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueePlayCount renders negative number 1`] = `
Array [
  .c0 {
  marquee-play-count: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueePlayCount renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    marquee-play-count: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-play-count: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-play-count: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-play-count: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    marquee-play-count: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-play-count: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-play-count: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-play-count: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-play-count: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-play-count: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-play-count: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-play-count: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-play-count: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-play-count: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-play-count: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-play-count: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueePlayCount renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    marquee-play-count: July;
  }
}

@media April {
  .c0 {
    marquee-play-count: August;
  }
}

@media January {
  .c0 {
    marquee-play-count: September;
  }
}

@media April {
  .c0 {
    marquee-play-count: November;
  }
}

@media June {
  .c0 {
    marquee-play-count: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    marquee-play-count: July;
  }
}

@media April {
  .c0 {
    marquee-play-count: August;
  }
}

@media January {
  .c0 {
    marquee-play-count: September;
  }
}

@media April {
  .c0 {
    marquee-play-count: November;
  }
}

@media June {
  .c0 {
    marquee-play-count: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-play-count: January;
  }
}

@media April {
  .c0 {
    marquee-play-count: December;
  }
}

@media January {
  .c0 {
    marquee-play-count: April;
  }
}

@media April {
  .c0 {
    marquee-play-count: May;
  }
}

@media June {
  .c0 {
    marquee-play-count: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-play-count: January;
  }
}

@media April {
  .c0 {
    marquee-play-count: December;
  }
}

@media January {
  .c0 {
    marquee-play-count: April;
  }
}

@media April {
  .c0 {
    marquee-play-count: May;
  }
}

@media June {
  .c0 {
    marquee-play-count: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueePlayCount renders postitive number 1`] = `
Array [
  .c0 {
  marquee-play-count: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueePlayCount renders string 1`] = `
Array [
  .c0 {
  marquee-play-count: July;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: July;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: June;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: June;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueePlayCount renders valid theme path 1`] = `
Array [
  .c0 {
  marquee-play-count: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-play-count: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
